Update data layer according to Challenge changes